--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "analyze": "node analysis_cross.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.13.2",
+    "canvas": "^2.11.2",
+    "chart.js": "^4.5.1",
+    "chartjs-node-canvas": "^5.0.0",
     "commander": "^14.0.2"
   }
 }
