--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "canvas": "^2.11.2",
     "chart.js": "^4.5.1",
     "chartjs-node-canvas": "^5.0.0",
-    "commander": "^14.0.2"
+    "commander": "^14.0.2",
+    "csv-parse": "^6.1.0",
+    "csv-parser": "^3.2.0",
+    "csv-stringify": "^6.6.0"
   }
 }
